# windows-nats-shell

./: Makefile  config.json  config.yml  go.mod  go.sum  main.go  todo.md
c/hook-dll/: hook.c  hook.cpp  hook.h
cmd/background/: main.go  main_test.go  shader.frag  shader.vert
cmd/background/colors/: colors.go
cmd/background/gfx/: gfx.go
cmd/background/windowhelper/: windowhelper.go
cmd/background/winhacks/: winhacks.go
cmd/c-hooks/: CMakeLists.txt  hook.cpp  hook.hpp  main.cpp
cmd/driver/: driver_test.go  main.go
cmd/events/: main.go
cmd/events/libevents/: main.go
cmd/hotkey-manager/: main.go
cmd/hotkey-manager/keymap/: keymap.go
cmd/hotkeys/: main.go
cmd/hotkeys/border-control/: border.go
cmd/hotkeys/keymap/: keymap.go
cmd/shell/: main.go
cmd/shell-event-publisher/: main.go
cmd/shell-event-publisher/hooks/: hooks.go  hooks.h
cmd/shell/registration/: registration.go
cmd/shell/service/: service.go
cmd/test-nats/: main.go
cmd/toast/: main.go
cmd/windowmanager/: main.go  todo.md
cmd/windowmanager/inputhandler/: inputhandler.go
cmd/windowmanager/windowmanager/: windowmanager.go
cmd/windows-nats-driver/: driver_test.go  main.go
cmd/windows-shell/: main.go
cmd/windows-shell/service/: service.go
nats/: nats.go
nats/api/: api.go
nats/windows-server/: server.go
pkg/gfx/colors/: colors.go
pkg/hooks/mouse/: mouse.go
pkg/input/: input.go
pkg/keyboard/: keyboard.go
pkg/utils/: utils.go  utils_test.go
pkg/winapi/: winapi.go
pkg/wintypes/: wintypes.go  wintypes_test.go
winapi/: winapi.go
wintypes/: wintypes.go
(+28 files in other folders)
